--- a/modulo-4/Hands On Lab 1.ipynb
+++ b/modulo-4/Hands On Lab 1.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "d655af8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Importacion del archivo\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      5\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39m./data-set.csv\u001b[39m\u001b[39m\"\u001b[39m, sep \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "#Importacion del archivo\n",
     "\n",
@@ -16,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "632ba0ae",
    "metadata": {},
    "outputs": [
@@ -41,117 +53,155 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>money</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>model</th>\n",
-       "      <th>year</th>\n",
-       "      <th>color</th>\n",
-       "      <th>fuel_type</th>\n",
-       "      <th>door</th>\n",
-       "      <th>gear</th>\n",
-       "      <th>motor</th>\n",
-       "      <th>body_type</th>\n",
-       "      <th>kilometres</th>\n",
-       "      <th>currency</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>host_name</th>\n",
+       "      <th>neighbourhood_group</th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>last_review</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>availability_365</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10350000</td>\n",
-       "      <td>Toyota</td>\n",
-       "      <td>Corolla Cross</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>Plateado</td>\n",
-       "      <td>Nafta</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Automática</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>500</td>\n",
-       "      <td>pesos</td>\n",
+       "      <td>2539</td>\n",
+       "      <td>Clean &amp; quiet apt home by the park</td>\n",
+       "      <td>2787</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>Kensington</td>\n",
+       "      <td>40.64749</td>\n",
+       "      <td>-73.97237</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>149</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2018-10-19</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>6</td>\n",
+       "      <td>365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10850000</td>\n",
-       "      <td>Jeep</td>\n",
-       "      <td>Compass</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>Blanco</td>\n",
-       "      <td>Nafta</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Automática</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>500</td>\n",
-       "      <td>pesos</td>\n",
+       "      <td>2595</td>\n",
+       "      <td>Skylit Midtown Castle</td>\n",
+       "      <td>2845</td>\n",
+       "      <td>Jennifer</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Midtown</td>\n",
+       "      <td>40.75362</td>\n",
+       "      <td>-73.98377</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2019-05-21</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>2</td>\n",
+       "      <td>355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>35500</td>\n",
-       "      <td>Jeep</td>\n",
-       "      <td>Compass</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>Gris oscuro</td>\n",
-       "      <td>Nafta</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Automática</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>500</td>\n",
-       "      <td>dólares</td>\n",
+       "      <td>3647</td>\n",
+       "      <td>THE VILLAGE OF HARLEM....NEW YORK !</td>\n",
+       "      <td>4632</td>\n",
+       "      <td>Elisabeth</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Harlem</td>\n",
+       "      <td>40.80902</td>\n",
+       "      <td>-73.94190</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>19000</td>\n",
-       "      <td>Citroën</td>\n",
-       "      <td>C4 Cactus</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>Gris oscuro</td>\n",
-       "      <td>Nafta</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Automática</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>550</td>\n",
-       "      <td>dólares</td>\n",
+       "      <td>3831</td>\n",
+       "      <td>Cozy Entire Floor of Brownstone</td>\n",
+       "      <td>4869</td>\n",
+       "      <td>LisaRoxanne</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>Clinton Hill</td>\n",
+       "      <td>40.68514</td>\n",
+       "      <td>-73.95976</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>89</td>\n",
+       "      <td>1</td>\n",
+       "      <td>270</td>\n",
+       "      <td>2019-07-05</td>\n",
+       "      <td>4.64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5800000</td>\n",
-       "      <td>Toyota</td>\n",
-       "      <td>Corolla</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Gris</td>\n",
-       "      <td>Nafta</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Manual</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>Sedán</td>\n",
-       "      <td>9000</td>\n",
-       "      <td>pesos</td>\n",
+       "      <td>5022</td>\n",
+       "      <td>Entire Apt: Spacious Studio/Loft by central park</td>\n",
+       "      <td>7192</td>\n",
+       "      <td>Laura</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>East Harlem</td>\n",
+       "      <td>40.79851</td>\n",
+       "      <td>-73.94399</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>80</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2018-11-19</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      money    brand          model  year        color fuel_type  door  \\\n",
-       "0  10350000   Toyota  Corolla Cross  2022     Plateado     Nafta   5.0   \n",
-       "1  10850000     Jeep        Compass  2022       Blanco     Nafta   5.0   \n",
-       "2     35500     Jeep        Compass  2022  Gris oscuro     Nafta   5.0   \n",
-       "3     19000  Citroën      C4 Cactus  2022  Gris oscuro     Nafta   5.0   \n",
-       "4   5800000   Toyota        Corolla  2019         Gris     Nafta   4.0   \n",
+       "     id                                              name  host_id  \\\n",
+       "0  2539                Clean & quiet apt home by the park     2787   \n",
+       "1  2595                             Skylit Midtown Castle     2845   \n",
+       "2  3647               THE VILLAGE OF HARLEM....NEW YORK !     4632   \n",
+       "3  3831                   Cozy Entire Floor of Brownstone     4869   \n",
+       "4  5022  Entire Apt: Spacious Studio/Loft by central park     7192   \n",
        "\n",
-       "         gear motor body_type  kilometres currency  \n",
-       "0  Automática   NaN       SUV         500    pesos  \n",
-       "1  Automática   2.4       SUV         500    pesos  \n",
-       "2  Automática   2.4       SUV         500  dólares  \n",
-       "3  Automática   NaN       SUV         550  dólares  \n",
-       "4      Manual   1.8     Sedán        9000    pesos  "
+       "     host_name neighbourhood_group neighbourhood  latitude  longitude  \\\n",
+       "0         John            Brooklyn    Kensington  40.64749  -73.97237   \n",
+       "1     Jennifer           Manhattan       Midtown  40.75362  -73.98377   \n",
+       "2    Elisabeth           Manhattan        Harlem  40.80902  -73.94190   \n",
+       "3  LisaRoxanne            Brooklyn  Clinton Hill  40.68514  -73.95976   \n",
+       "4        Laura           Manhattan   East Harlem  40.79851  -73.94399   \n",
+       "\n",
+       "         room_type  price  minimum_nights  number_of_reviews last_review  \\\n",
+       "0     Private room    149               1                  9  2018-10-19   \n",
+       "1  Entire home/apt    225               1                 45  2019-05-21   \n",
+       "2     Private room    150               3                  0         NaN   \n",
+       "3  Entire home/apt     89               1                270  2019-07-05   \n",
+       "4  Entire home/apt     80              10                  9  2018-11-19   \n",
+       "\n",
+       "   reviews_per_month  calculated_host_listings_count  availability_365  \n",
+       "0               0.21                               6               365  \n",
+       "1               0.38                               2               355  \n",
+       "2                NaN                               1               365  \n",
+       "3               4.64                               1               194  \n",
+       "4               0.10                               1                 0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,7 +1553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
